--- a/style.css
+++ b/style.css
@@ -17,12 +17,20 @@ body   {
 main    {
     display: flex;
     flex-direction: column;
-    /* justify-content: center;
-    align-items: center; */
-    margin: auto;
+    justify-content: center;
+    align-items: center;
+    margin: 60px auto;
     width: 30%;
     background-color: white;
+    border-radius: 15px;
+    overflow: auto;
 }
+
+.heroimg   {
+    width: 100%;
+    margin: auto;
+    /* border-radius: inherit;*/
+} 
 
 main h3     {
     font-family:'Red Hat Display', sans-serif;
@@ -41,8 +49,150 @@ main h3     {
     text-align: center;
     margin: auto;
     line-height: 26px;
+    color: hsl(240, 11%, 57%);
 
 }
 
-.attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+.subscriptionplan       {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: hsl(225, 100%, 98%) ;
+    padding: 13px;
+    width: 80%;
+    margin: auto;
+    border-radius: 10px;
+}
+
+.musicicon      {
+    height: 35px;
+}
+
+.annual     {
+    font-family: 'Red Hat Display', sans-serif;
+    margin-right: 80px;
+
+}
+
+.annual h4  {
+    font-weight: 700;
+    color: black;
+    font-size: 14px;
+}
+
+.annual p  {
+    font-weight: 500;
+    color: hsl(240, 11%, 57%);
+    font-size: 14px;
+    /* letter-spacing: 1.7px; */
+    font-family: 'Red Hat Display', sans-serif;
+}
+
+
+.subscriptionplan a  {
+    font-weight: 700;
+    font-size: 10px;
+    font-family: 'Red Hat Display', sans-serif;
+    color: hsl(245, 75%, 52%);
+}
+
+
+.subscriptionplan a:hover  {
+    font-weight: 700;
+    font-family: 'Red Hat Display', sans-serif;
+    color: rgb(118, 108, 241);
+    font-size: 10px;
+    text-decoration: none;
+}
+
+
+button      {
+    width: 80%;
+    margin: 30px auto 20px auto;
+    background-color:hsl(245, 75%, 52%);
+    text-align: center;
+    font-family: 'Red Hat Display', sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    color: white;
+    border: 1px solid hsl(245, 75%, 52%);
+    border-radius: 10px;
+    padding: 12px;
+    box-shadow: 0 4px 8px 0 rgb(162, 152, 246);
+    
+}
+
+
+button:hover      {
+    width: 80%;
+    margin: 30px auto 20px auto;
+    background-color:rgb(118, 108, 241);
+    text-align: center;
+    font-family: 'Red Hat Display', sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    color: white;
+    border: 1px solid rgb(118, 108, 241);
+    border-radius: 10px;
+    padding: 12px;
+    box-shadow: 0 4px 8px 0 rgb(162, 152, 246);
+    cursor: pointer;
+    
+}
+
+.cancel     {
+    font-family: 'Red Hat Display', sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    text-align: center;
+    color:hsl(240, 11%, 57%);
+    margin: 0 auto 30px auto ;
+    cursor: pointer;
+}
+
+.cancel:hover  {
+    font-family: 'Red Hat Display', sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    text-align: center;
+    color:rgb(30, 37, 63);
+    margin: 0 auto 30px auto ;
+    cursor: pointer;
+}
+
+.attribution { 
+                font-size: 11px; 
+                text-align: center; 
+                font-family: 'Red Hat Display', sans-serif;
+                margin: -40px auto 20px auto;
+}
+    .attribution a { 
+        color: hsl(228, 45%, 44%); 
+    }
+
+
+    @media (min-width:350px) and (max-width:700px)  {
+        body   {
+            background-image: url(./images/pattern-background-mobile.svg),
+            linear-gradient(to right, rgb(214, 225, 255)
+            , rgb(214, 225, 255))
+            ;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    background-size: cover;
+}
+
+
+main    {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 60px auto;
+    width: 90%;
+    background-color: white;
+    border-radius: 15px;
+    overflow: auto;
+}
+    }
